package edu.fiuba.algo3.modelo;

public interface OperacionNombrePuntaje {

    public void operar(String nombre, int puntos);
}
